# bazel_issue_22680_repro

./: .gitignore  MODULE.bazel  Makefile  README.md  repro.Dockerfile  repro.sh
postgres/: BUILD  postgres_src.BUILD
repos/debian/: debian11.yaml  debian12.lock.json  debian12.yaml
testimage/: BUILD.bazel
